all bugs squashed

--- a/sites/all/themes/custom/bootstrap_subtheme_oandg/css/style.css
+++ b/sites/all/themes/custom/bootstrap_subtheme_oandg/css/style.css
@@ -83,7 +83,7 @@ hr {
 }
 
 html[data-useragent*='rv:11.0'] .fluid-container  {
-          background-color: green;
+
   }
 
 #navbar {
